# pacd-tbc-deploy

./: .gitignore  README.md  app.py  preprocess.py  process.py  pyproject.toml  requirements.txt  segmentation.py
model/: svm.joblib
